--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "swish-success-server",
   "version": "1.0.0",
   "description": "swish-success-server",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
